--- a/_config.yml
+++ b/_config.yml
@@ -101,9 +101,9 @@ analytics:
 # Site Author
 author:
   name             : ""
-  avatar           : "" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "assets/logo.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : ""
-  location         :
+  location         : "Torino (Italy)"
   email            : 
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
@@ -113,7 +113,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           :
+  github           : "ToMove2017"
   gitlab           :
   google_plus      :
   keybase          :
