--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ minimal_mistakes_skin    : "default" # "default" "air", "aqua", "contrast", "dar
 
 # Site Settings
 locale                   : "en"
-title                    : "ToMove 2017"
+title                    : "ToMove"
 title_separator          : "-"
-name                     : "ToMove 2017"
+name                     : "ToMove"
 description              : "description"
 url                      : "https://tomove2017.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
